# AYE-Hear

./: .coveragerc  .gitignore  README.md  diag.txt  pyproject.toml  test_full_run.txt  test_results.txt  test_run_full.txt  test_run_verbose.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
config/: default.yaml
deployment-evidence/: bitlocker-evidence-20260416-135556.txt  bitlocker-waiver-20260416.md
docs/: HEAR-038-MANUAL-TEST-GUIDE.md  HEAR-038-QA-SUMMARY.md  HEAR-038-defect-tracking.md  HEAR-045-qa-evidence.md  HEAR-046-security-review.md  HEAR-051-security-gate-review.md  HEAR-052-release-decision.md  HEAR-056-security-recheck.md  HEAR-058-release-build-record.md  HEAR-062-asr-bundle-assessment.md  HEAR-063-regression-qa-evidence.md  HEAR-066-v1-readiness-gap-analysis.md  HEAR-071-product-complete-reassessment.md  HEAR-076-qa-evidence.md  HEAR-086-qa-evidence.md  HEAR-088-qa-evidence.md  HEAR-091-INSTALLED-E2E-CHECKLIST.md  HEAR-099-benchmark-execution-plan.md  HEAR-100-build-evidence.md  HEAR-103-RUNBOOK-CHECKLIST.md  HEAR-103-qa-evidence.md  HEAR-104-build-evidence.md  HEAR-108-qa-evidence.md  HEAR-109-security-review.md  HEAR-110-build-evidence.md  HEAR-111-db-shutdown-fix.md  HEAR-112-readiness-reconciliation.md  HEAR-113-qa-evidence.md  HEAR-119-security-review.md  HEAR-120-qa-evidence.md  HEAR-121-readiness-reconciliation.md  HEAR-122-build-evidence.md  HEAR-123-qa-evidence.md  HEAR-126-qa-evidence.md  HEAR-127-security-recheck.md  HEAR-128-readiness-reconciliation.md  HEAR-129-build-evidence.md  PRODUCT_FOUNDATION.md  (+2 more)
(+179 files in other folders)
